grammar.txt
<OPERATOR_1> ::= '+' | '-'
<OPERATOR_2> ::= '*' | '/' | '%'

<TERM> ::= TOK_ID
<TERM> ::= TOK_CONST
<TERM> ::= '(' <EXPRESSION> ')'
<TERM> ::= <FUNCTION_CALL>

<NEGATION> ::= <TERM>
<NEGATION> ::= '-'<TERM>

<OP_2_LIST> ::= <NEGATION> <OP_2_LIST_TAIL>
<OP_2_LIST_TAIL> ::= <OPERATOR_2> <NEGATION> <OP_2_LIST_TAIL>
<OP_2_LIST_TAIL> ::= e

<OP_1_LIST> ::= <OP_2_LIST> <OP_1_LIST_TAIL>
<OP_1_LIST_TAIL> ::= <OPERATOR_1> <OP_2_LIST> <OP_1_LIST_TAIL>
<OP_1_LIST_TAIL> ::= e

<EXPRESSION> ::= <OP_1_LIST>

<PARAM_LIST> ::= TOK_ID <PARAM_LIST_TAIL>
<PARAM_LIST> ::= e

<PARAM_LIST_TAIL> ::= ',' TOK_ID <PARAM_LIST>
<PARAM_LIST_TAIL> ::= e

<ARG_LIST> ::= <EXPRESSION> <ARG_LIST_TAIL>
<ARG_LIST> ::= e

<ARG_LIST_TAIL> ::= ',' <EXPRESSION> <ARG_LIST>
<ARG_LIST_TAIL> ::= e

<PROTOTYPE> ::= TOK_ID '(' <PARAM_LIST> ')'

<DEFINITION> ::= 'def' <PROTOTYPE> <EXPRSSION>

<EXTERNAL> ::= 'extern' <PROTOTYPE>

<FUNCTION_CALL> ::= TOK_ID '(' <ARG_LIST> ')'

<TOP> ::= <DEFINITION> ';'
<TOP> ::= <EXTERNAL> ';'
<TOP> ::= <EXPRESSION> ';'
<TOP> ::= e
